--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
   <body>
     <header>
       <nav>
-        <a href=”./index.html”>WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
+      <address>
       <ul>
         <li>
-          <a href="" target="_blank" rel="noopener noreferrer"
-            >info@devstudio.com</a
-          >
+          <a href=”mailto:info@devstudio.com”>info@devstudio.com</a>
         </li>
         <li>
-          <a href="" target="_blank" rel="noopener noreferrer"
-            >+11 (000) 111-11-11</a
-          >
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
+    </address>
     </header>
     <main>
       <section>
