--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Other Service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <section>
+        <h2 hidden>Best sides</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -69,18 +70,18 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="mark.jpg" alt="Mark Guerrero" width="264" height="260" />
+            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="tom.jpg" alt="Tom Fort" width="264" height="260" />
+            <img src="./images/tom.jpg" alt="Tom Fort" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="camila.jpg"
+              src="./images/camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -90,7 +91,7 @@
           </li>
           <li>
             <img
-              src="daniel.jpg"
+              src="./images/daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
