--- a/index.html
+++ b/index.html
@@ -4,61 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hm1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header>
+      <nav class="header-navigation">
+        <a class="header-logo" href="./index.html"><span class="header-logo-color">Web</span>Studio</a>
+        <ul class="header-menu">
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Studio</a></li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Portfolio</a></li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="contact">
+      <ul class="contact-list">
+        <li class="contact-list-item">
+          <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <li class="contact-list-item">
+          <a class="contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2 hidden>Best sides</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="best-sides">
+        <h2 class="visually-hidden">Best sides</h2>
+        <ul class="best-sides-list">
+          <li class="best-sides-list-item">
+            <h3 class="best-sides-subtitle">Strategy</h3>
+            <p class="best-sides-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="best-sides-list-item">
+            <h3 class="best-sides-subtitle">Punctuality</h3>
+            <p class="best-sides-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="best-sides-list-item">
+            <h3 class="best-sides-subtitle">Diligence</h3>
+            <p class="best-sides-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
-          </li>
+          </li class="best-sides-list-item">
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="best-sides-subtitle">Technologies</h3>
+            <p class="best-sides-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
