--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="header-menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="contact">
+      <address class="contact-adress">
       <ul class="contact-list">
         <li class="contact-list-item">
           <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -74,35 +74,70 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" class="img" />
+            <h3 class="tastte-subtitle">Mark Guerrero</h3>
+            <p class="taste-text">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="img" />
+            <h3 class="tastte-subtitle">Tom Ford</h3>
+            <p class="taste-text">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="img" />
+            <h3 class="tastte-subtitle">Camila Garcia</h3>
+            <p class="taste-text">Marketing</p>
           </li>
-          <li>
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="img" />
+            <h3 class="tastte-subtitle">Daniel Wilson</h3>
+            <p class="taste-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <h2 class="porfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img src="./images/Bank.jpg" alt="Banking App" width: 360px; height: 300px; class="portfolio-img" />
+            <h3 class="porfolio-subtitle">Banking App</h3>
+            <p class="porfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/cash.jpg" alt="Cashless Payment" width: 360px; height: 300px; class="portfolio-img" />
+            <h3 class="porfolio-subtitle">Cashless Payment</h3>
+            <p class="porfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/meditation.jpg" alt="Meditation App" width: 360px; height: 300px; class="portfolio-img" />
+            <h3 class="porfolio-subtitle">Meditation App</h3>
+            <p class="porfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/taxi.jpg" alt="Taxi Service" width: 360px; height: 300px; class="portfolio-img" />
+            <h3 class="porfolio-subtitle">Taxi Service</h3>
+            <p class="porfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/screen.jpg" alt="Screen Illustaitors" width: 360px; height: 300px; class="portfolio-img" />
+            <h3 class="porfolio-subtitle">Screen Illustrations</h3>
+            <p class="porfolio-text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/courses.jpg" alt="Online Courses" width: 360px; height: 300px; class="portfolio-img" />
+            <h3 class="porfolio-subtitle">Online Courses</h3>
+            <p class="porfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"><span class="footer-logo-web">Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
