--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <header class="header>
+    <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html"><span class="header-logo-color">Web</span>Studio</a>
         <ul class="header-menu">
@@ -63,8 +63,8 @@
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
-          </li class="best-sides-list-item">
-          <li>
+          </li>
+          <li class="best-sides-list-item">
             <h3 class="best-sides-subtitle">Technologies</h3>
             <p class="best-sides-text">
               Design practice focused on digital experiences. We bring forth a
@@ -103,32 +103,32 @@
         <h2 class="porfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img src="./images/Bank.jpg" alt="Banking App" width: 360px; height: 300px; class="portfolio-img" />
+            <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
             <h3 class="porfolio-subtitle">Banking App</h3>
             <p class="porfolio-text">App</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/cash.jpg" alt="Cashless Payment" width: 360px; height: 300px; class="portfolio-img" />
+            <img src="./images/cash.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-img" />
             <h3 class="porfolio-subtitle">Cashless Payment</h3>
             <p class="porfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/meditation.jpg" alt="Meditation App" width: 360px; height: 300px; class="portfolio-img" />
+            <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img" />
             <h3 class="porfolio-subtitle">Meditation App</h3>
             <p class="porfolio-text">App</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/taxi.jpg" alt="Taxi Service" width: 360px; height: 300px; class="portfolio-img" />
+            <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
             <h3 class="porfolio-subtitle">Taxi Service</h3>
             <p class="porfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/screen.jpg" alt="Screen Illustaitors" width: 360px; height: 300px; class="portfolio-img" />
+            <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
             <h3 class="porfolio-subtitle">Screen Illustrations</h3>
             <p class="porfolio-text">Design</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/courses.jpg" alt="Online Courses" width: 360px; height: 300px; class="portfolio-img" />
+            <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
             <h3 class="porfolio-subtitle">Online Courses</h3>
             <p class="porfolio-text">Marketing</p>
           </li>
