--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><span class="header-logo-color">Web</span>Studio</a>
+        <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
         <ul class="header-menu">
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Studio</a></li>
@@ -135,7 +135,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span class="footer-logo-web">Web</span>Studio</a>
+      <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
