--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
         <ul class="header-menu">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a></li>
+            <a class="header-menu-link" href="./index.html">Studio</a></li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Portfolio</a></li>
+            <a class="header-menu-link" href="./index.html">Portfolio</a></li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a></li>
+            <a class="header-menu-link" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address class="contact-adress">
