--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <li class="header-menu-item">
             <a class="header-menu-link" href="./index.html">Studio</a></li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Portfolio</a></li>
+            <a class="header-menu-link" href="">Portfolio</a></li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Contacts</a></li>
+            <a class="header-menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="contact-adress">
