--- a/index.html
+++ b/index.html
@@ -7,139 +7,153 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
-        <ul class="header-menu">
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Studio</a></li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Portfolio</a></li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a></li>
+      <header class="header">
+        <div class="container">
+        <nav class="header-navigation">
+          <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
+          <ul class="header-menu">
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="./index.html">Studio</a></li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Portfolio</a></li>
+            <li class="header-menu-item">
+              <a class="header-menu-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contact-adress">
+        <ul class="contact-list">
+          <li class="contact-list-item">
+            <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-list-item">
+            <a class="contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
-      </nav>
-      <address class="contact-adress">
-      <ul class="contact-list">
-        <li class="contact-list-item">
-          <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="contact-list-item">
-          <a class="contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </address>
-    </header>
+      </address>
+    </div>
+      </header>
     <main>
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
-      </section>
+        <section class="hero">
+          <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
+        </section>
 
-      <section class="best-sides">
-        <h2 class="visually-hidden">Best sides</h2>
-        <ul class="best-sides-list">
-          <li class="best-sides-list-item">
-            <h3 class="best-sides-subtitle">Strategy</h3>
-            <p class="best-sides-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="best-sides-list-item">
-            <h3 class="best-sides-subtitle">Punctuality</h3>
-            <p class="best-sides-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="best-sides-list-item">
-            <h3 class="best-sides-subtitle">Diligence</h3>
-            <p class="best-sides-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="best-sides-list-item">
-            <h3 class="best-sides-subtitle">Technologies</h3>
-            <p class="best-sides-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
+        <section class="best-sides">
+          <div class="container">
+          <h2 class="visually-hidden">Best sides</h2>
+          <ul class="best-sides-list">
+            <li class="best-sides-list-item">
+              <h3 class="best-sides-subtitle">Strategy</h3>
+              <p class="best-sides-text">
+                Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </li>
+            <li class="best-sides-list-item">
+              <h3 class="best-sides-subtitle">Punctuality</h3>
+              <p class="best-sides-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="best-sides-list-item">
+              <h3 class="best-sides-subtitle">Diligence</h3>
+              <p class="best-sides-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="best-sides-list-item">
+              <h3 class="best-sides-subtitle">Technologies</h3>
+              <p class="best-sides-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+        </section>
 
-      <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" class="img" />
-            <h3 class="tastte-subtitle">Mark Guerrero</h3>
-            <p class="taste-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="img" />
-            <h3 class="tastte-subtitle">Tom Ford</h3>
-            <p class="taste-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="img" />
-            <h3 class="tastte-subtitle">Camila Garcia</h3>
-            <p class="taste-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="img" />
-            <h3 class="tastte-subtitle">Daniel Wilson</h3>
-            <p class="taste-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <section class="portfolio">
-        <h2 class="porfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
-            <h3 class="porfolio-subtitle">Banking App</h3>
-            <p class="porfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/cash.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-img" />
-            <h3 class="porfolio-subtitle">Cashless Payment</h3>
-            <p class="porfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img" />
-            <h3 class="porfolio-subtitle">Meditation App</h3>
-            <p class="porfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
-            <h3 class="porfolio-subtitle">Taxi Service</h3>
-            <p class="porfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
-            <h3 class="porfolio-subtitle">Screen Illustrations</h3>
-            <p class="porfolio-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
-            <h3 class="porfolio-subtitle">Online Courses</h3>
-            <p class="porfolio-text">Marketing</p>
-          </li>
-        </ul>
-      </section>
+        <section class="team">
+          <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" class="img" />
+              <h3 class="tastte-subtitle">Mark Guerrero</h3>
+              <p class="taste-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="img" />
+              <h3 class="tastte-subtitle">Tom Ford</h3>
+              <p class="taste-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="img" />
+              <h3 class="tastte-subtitle">Camila Garcia</h3>
+              <p class="taste-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="img" />
+              <h3 class="tastte-subtitle">Daniel Wilson</h3>
+              <p class="taste-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+        </section>
+
+        <section class="portfolio">
+          <div class="container">
+          <h2 class="porfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
+              <h3 class="porfolio-subtitle">Banking App</h3>
+              <p class="porfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/cash.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-img" />
+              <h3 class="porfolio-subtitle">Cashless Payment</h3>
+              <p class="porfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img" />
+              <h3 class="porfolio-subtitle">Meditation App</h3>
+              <p class="porfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
+              <h3 class="porfolio-subtitle">Taxi Service</h3>
+              <p class="porfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
+              <h3 class="porfolio-subtitle">Screen Illustrations</h3>
+              <p class="porfolio-text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
+              <h3 class="porfolio-subtitle">Online Courses</h3>
+              <p class="porfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
+        </section>
     </main>
-    <footer class="footer">
-      <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+      <footer class="footer">
+        <div class="container">
+        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
+      </footer>
   </body>
 </html>
