--- a/index.html
+++ b/index.html
@@ -86,22 +86,24 @@
           <ul class="team-list">
             <li class="team-item">
               <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" class="img" />
-              <h3 class="tastte-subtitle">Mark Guerrero</h3>
-              <p class="taste-text">Product Designer</p>
+              <div class="first-pic-name">
+                <h3 class="taste-subtitle">Mark Guerrero</h3>
+                <p class="taste-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="img" />
-              <h3 class="tastte-subtitle">Tom Ford</h3>
+              <h3 class="taste-subtitle">Tom Ford</h3>
               <p class="taste-text">Frontend Developer</p>
             </li>
             <li class="team-item">
               <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="img" />
-              <h3 class="tastte-subtitle">Camila Garcia</h3>
+              <h3 class="taste-subtitle">Camila Garcia</h3>
               <p class="taste-text">Marketing</p>
             </li>
             <li class="team-item">
               <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="img" />
-              <h3 class="tastte-subtitle">Daniel Wilson</h3>
+              <h3 class="taste-subtitle">Daniel Wilson</h3>
               <p class="taste-text">UI Designer</p>
             </li>
           </ul>
