--- a/index.html
+++ b/index.html
@@ -93,18 +93,24 @@
             </li>
             <li class="team-item">
               <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="img" />
+              <div class="first-pic-name">
               <h3 class="taste-subtitle">Tom Ford</h3>
               <p class="taste-text">Frontend Developer</p>
+            </div>
             </li>
             <li class="team-item">
               <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" class="img" />
+              <div class="first-pic-name">
               <h3 class="taste-subtitle">Camila Garcia</h3>
               <p class="taste-text">Marketing</p>
+            </div>
             </li>
             <li class="team-item">
               <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" class="img" />
+              <div class="first-pic-name">
               <h3 class="taste-subtitle">Daniel Wilson</h3>
               <p class="taste-text">UI Designer</p>
+            </div>
             </li>
           </ul>
         </div>
