--- a/index.html
+++ b/index.html
@@ -122,33 +122,45 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
-              <h3 class="porfolio-subtitle">Banking App</h3>
-              <p class="porfolio-text">App</p>
+              <div class="portfolio-container">
+                <h3 class="porfolio-subtitle">Banking App</h3>
+                <p class="porfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/cash.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Cashless Payment</h3>
               <p class="porfolio-text">Marketing</p>
+            </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Meditation App</h3>
               <p class="porfolio-text">App</p>
+            </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Taxi Service</h3>
               <p class="porfolio-text">Marketing</p>
+            </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Screen Illustrations</h3>
               <p class="porfolio-text">Design</p>
+            </div>
             </li>
             <li class="portfolio-item">
               <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Online Courses</h3>
               <p class="porfolio-text">Marketing</p>
+            </div>
             </li>
           </ul>
         </div>
