--- a/index.html
+++ b/index.html
@@ -167,13 +167,48 @@
         </section>
     </main>
       <footer class="footer">
-        <div class="container">
-        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
-      </div>
+        <div class="container footer-container">
+        <div class="logo-paragraph">
+          <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="media-text">Social media</p>
+            <ul class="media-list">
+              <li class="media-list-item">
+                <a class="media-link" href="">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagramf"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="media-list-item">
+                <a class="media-link" href="">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitterf"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="media-list-item">
+                <a class="media-link" href="">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebookf"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="media-list-item">
+                <a class="media-link" href="">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedinf"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </footer>
   </body>
 </html>
