--- a/index.html
+++ b/index.html
@@ -47,6 +47,38 @@
         <section class="best-sides">
           <div class="container">
           <h2 class="visually-hidden">Best sides</h2>
+          <div class="best-container-icons">
+            <ul class="best-sides-icon-list">
+            <li class="best-sides-icon-item">
+              <a class="best-sides-icon-link" href="">
+                <svg class="best-sides-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="best-sides-icon-item">
+              <a class="best-sides-icon-link" href="">
+                <svg class="best-sides-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="best-sides-icon-item">
+              <a class="best-sides-icon-link" href="">
+                <svg class="best-sides-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="best-sides-icon-item">
+              <a class="best-sides-icon-link" href="">
+                <svg class="best-sides-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </a>
+            </li>
+            </ul>
+          </div>
           <ul class="best-sides-list">
             <li class="best-sides-list-item">
               <h3 class="best-sides-subtitle">Strategy</h3>
@@ -89,6 +121,38 @@
               <div class="first-pic-name">
                 <h3 class="taste-subtitle">Mark Guerrero</h3>
                 <p class="taste-text">Product Designer</p>
+                <div class="team-container">
+                  <ul class="team-icon-list">
+                    <li class="team-icon-item">
+                      <a class="team-icon-link" href="">
+                        <svg class="team-icon" width="12" height="12">
+                          <use href="./images/icons.svg#icon-instagramf"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a class="team-icon-link" href="">
+                        <svg class="team-icon" width="12" height="12">
+                          <use href="./images/icons.svg#icon-twitterf"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a class="team-icon-link" href="">
+                        <svg class="team-icon" width="12" height="12">
+                          <use href="./images/icons.svg#icon-facebookf"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-icon-item">
+                      <a class="team-icon-link" href="">
+                        <svg class="team-icon" width="12" height="12">
+                          <use href="./images/icons.svg#icon-linkedinf"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -96,6 +160,38 @@
               <div class="first-pic-name">
               <h3 class="taste-subtitle">Tom Ford</h3>
               <p class="taste-text">Frontend Developer</p>
+              <div class="team-container">
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-instagramf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-twitterf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-facebookf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-linkedinf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
             </li>
             <li class="team-item">
@@ -103,6 +199,38 @@
               <div class="first-pic-name">
               <h3 class="taste-subtitle">Camila Garcia</h3>
               <p class="taste-text">Marketing</p>
+              <div class="team-container">
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-instagramf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-twitterf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-facebookf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-linkedinf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
             </li>
             <li class="team-item">
@@ -110,6 +238,38 @@
               <div class="first-pic-name">
               <h3 class="taste-subtitle">Daniel Wilson</h3>
               <p class="taste-text">UI Designer</p>
+              <div class="team-container">
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-instagramf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-twitterf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-facebookf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="12" height="12">
+                        <use href="./images/icons.svg#icon-linkedinf"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
             </li>
           </ul>
@@ -128,7 +288,14 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/cash.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-cover-wrap">
+                <img  src="./images/cash.jpg" 
+                alt="Cashless Payment"
+                width="360" height="300" 
+                class="portfolio-img" />
+              <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+              </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Cashless Payment</h3>
               <p class="porfolio-text">Marketing</p>
