--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
           <div class="best-container-icons">
             <ul class="best-sides-icon-list">
             <li class="best-sides-icon-item">
-              <a class="best-sides-icon-link" href="">
-                <svg class="best-sides-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </a>
+              <div class="best-sides-container">
+                <a class="best-sides-icon-link" href="">
+                  <svg class="best-sides-icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="best-sides-icon-item">
               <a class="best-sides-icon-link" href="">
