--- a/index.html
+++ b/index.html
@@ -47,16 +47,14 @@
         <section class="best-sides">
           <div class="container">
           <h2 class="visually-hidden">Best sides</h2>
-          <div class="best-container-icons">
+          <!-- <div class="best-container-icons">
             <ul class="best-sides-icon-list">
             <li class="best-sides-icon-item">
-              <div class="best-sides-container">
                 <a class="best-sides-icon-link" href="">
                   <svg class="best-sides-icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
                 </a>
-              </div>
             </li>
             <li class="best-sides-icon-item">
               <a class="best-sides-icon-link" href="">
@@ -80,9 +78,12 @@
               </a>
             </li>
             </ul>
-          </div>
+          </div> -->
           <ul class="best-sides-list">
             <li class="best-sides-list-item">
+              <div class="best-icon-cotainer">
+
+              </div>
               <h3 class="best-sides-subtitle">Strategy</h3>
               <p class="best-sides-text">
                 Our goal is to identify the business problem to walk away with the
