--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
           <ul class="best-sides-list">
             <li class="best-sides-list-item">
               <div class="best-icon-cotainer">
-
+                <a href="">
+                  <svg width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </a>
               </div>
               <h3 class="best-sides-subtitle">Strategy</h3>
               <p class="best-sides-text">
@@ -91,6 +95,13 @@
               </p>
             </li>
             <li class="best-sides-list-item">
+              <div class="best-icon-cotainer">
+                <a href="">
+                  <svg width="64" height="64">
+                    <use href="./images/icons.svg#icon-clock"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="best-sides-subtitle">Punctuality</h3>
               <p class="best-sides-text">
                 Bring the key message to the brand's audience for the best price
@@ -98,6 +109,13 @@
               </p>
             </li>
             <li class="best-sides-list-item">
+              <div class="best-icon-cotainer">
+                <a href="">
+                  <svg width="64" height="64">
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="best-sides-subtitle">Diligence</h3>
               <p class="best-sides-text">
                 Research and confirm brands that present the strongest digital
@@ -105,6 +123,13 @@
               </p>
             </li>
             <li class="best-sides-list-item">
+              <div class="best-icon-cotainer">
+                <a href="">
+                  <svg width="64" height="64">
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="best-sides-subtitle">Technologies</h3>
               <p class="best-sides-text">
                 Design practice focused on digital experiences. We bring forth a
