--- a/index.html
+++ b/index.html
@@ -47,38 +47,6 @@
         <section class="best-sides">
           <div class="container">
           <h2 class="visually-hidden">Best sides</h2>
-          <!-- <div class="best-container-icons">
-            <ul class="best-sides-icon-list">
-            <li class="best-sides-icon-item">
-                <a class="best-sides-icon-link" href="">
-                  <svg class="best-sides-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna"></use>
-                  </svg>
-                </a>
-            </li>
-            <li class="best-sides-icon-item">
-              <a class="best-sides-icon-link" href="">
-                <svg class="best-sides-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="best-sides-icon-item">
-              <a class="best-sides-icon-link" href="">
-                <svg class="best-sides-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="best-sides-icon-item">
-              <a class="best-sides-icon-link" href="">
-                <svg class="best-sides-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </a>
-            </li>
-            </ul>
-          </div> -->
           <ul class="best-sides-list">
             <li class="best-sides-list-item">
               <div class="best-icon-cotainer">
@@ -141,7 +109,7 @@
               <div class="first-pic-name">
                 <h3 class="taste-subtitle">Mark Guerrero</h3>
                 <p class="taste-text">Product Designer</p>
-                <div class="team-container">
+                <!-- <div class="team-container"> -->
                   <ul class="team-icon-list">
                     <li class="team-icon-item">
                       <a class="team-icon-link" href="">
@@ -173,7 +141,7 @@
                     </li>
                   </ul>
                 </div>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="team-item">
               <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" class="img" />
