--- a/index.html
+++ b/index.html
@@ -269,12 +269,14 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap">
+                <!-- <div class="cover-container"> -->
                 <img  src="./images/cash.jpg" 
                 alt="Cashless Payment"
                 width="360" height="300" 
                 class="portfolio-img" />
               <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
+              <!-- </div> -->
               </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Cashless Payment</h3>
