--- a/index.html
+++ b/index.html
@@ -261,23 +261,25 @@
           <h2 class="porfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap">
               <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
+              <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="porfolio-subtitle">Banking App</h3>
                 <p class="porfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-cover-wrap">
-                <div class="cover-container">
+              <!-- <div class="portfolio-cover-wrap">/ -->
                 <img  src="./images/cash.jpg" 
                 alt="Cashless Payment"
                 width="360" height="300" 
                 class="portfolio-img" />
-              <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
-              </div>
-              </div>
+              <!-- <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div> -->
+              <!-- </div> -->
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Cashless Payment</h3>
               <p class="porfolio-text">Marketing</p>
