--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <h2 class="porfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <div class="portfolio-cover-wrap">
+              <div class="portfolio-cover-wrap-container">
               <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
               <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
