--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
               <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
-              <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+              <!-- <div class="porfolio-text-wrap"> -->
+                <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              <!-- </div> -->
               </div>
               <div class="portfolio-container">
                 <h3 class="porfolio-subtitle">Banking App</h3>
