--- a/index.html
+++ b/index.html
@@ -263,9 +263,7 @@
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
               <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
-              <!-- <div class="porfolio-text-wrap"> -->
-                <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-              <!-- </div> -->
+              <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
                 <h3 class="porfolio-subtitle">Banking App</h3>
@@ -273,14 +271,13 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <!-- <div class="portfolio-cover-wrap">/ -->
+              <div class="portfolio-cover-wrap-container">/
                 <img  src="./images/cash.jpg" 
                 alt="Cashless Payment"
                 width="360" height="300" 
                 class="portfolio-img" />
-              <!-- <div class="porfolio-text-wrap"><p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-              </div> -->
-              <!-- </div> -->
+              <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Cashless Payment</h3>
               <p class="porfolio-text">Marketing</p>
