--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-cover-wrap-container">/
+              <div class="portfolio-cover-wrap-container">
                 <img  src="./images/cash.jpg" 
                 alt="Cashless Payment"
                 width="360" height="300" 
@@ -284,28 +284,40 @@
             </div>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-cover-wrap-container">
               <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img" />
+              <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Meditation App</h3>
               <p class="porfolio-text">App</p>
             </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-cover-wrap-container">
+                <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
+                <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Taxi Service</h3>
               <p class="porfolio-text">Marketing</p>
             </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-cover-wrap-container">
+                <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
+                <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Screen Illustrations</h3>
               <p class="porfolio-text">Design</p>
             </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
+              <div class="portfolio-cover-wrap-container">
+                <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
+                <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="portfolio-container">
               <h3 class="porfolio-subtitle">Online Courses</h3>
               <p class="porfolio-text">Marketing</p>
