--- a/index.html
+++ b/index.html
@@ -371,5 +371,21 @@
           </div>
         </div>
       </footer>
+      <div class="backdrop">
+        <div class="modal">
+          <button type="button" class="modal-button">
+            <svg class="modal-button-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-x-close"></use>
+            </svg>
+          </button>
+          <p class="modal-title">Leave your contacts and we will call you back</p>
+          <form class="modal-form">
+            <input type="text" class="modal-input">
+            <input type="text" class="modal-input">
+            <input type="text" class="modal-input">
+            <button type="submit" class="modal-form-button">Send</button>
+          </form>
+        </div>
+      </div>
   </body>
 </html>
