--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </div>
         </div>
       </footer>
-      <div class="backdrop">
+      <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-button">
             <svg class="modal-button-icon" width="8" height="8">
@@ -421,7 +421,7 @@
             </svg>
             </div>
             </div>
-            <div class="modal-field">
+            <div class="modal-field modal-field-cpmment">
               <label for="user-comment" class="modal-label">Comment</label>
               <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
             </div>
