--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </div>
         </div>
       </footer>
-      <div class="backdrop">
+      <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-button">
             <svg class="modal-button-icon" width="8" height="8">
