--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
       </button>
     </div>
     <div class="mob-menu">
-      <button type="button" class="menu-close-btn">
-        <svg class="modal-close-btn" width="24" height="24">
-          <use href="./images/icons.svg#icon-x-close"></use>
-        </svg>
-      </button>
-      <ul class="mob-menu-list">
-        <li class="mob-menu-item">
-          <a class="mob-menu-link" href="./index.html">Studio</a></li>
-        <li class="mob-menu-item">
-          <a class="mob-menu-link" href="">Portfolio</a></li>
-        <li class="mob-menu-item">
-          <a class="mob-menu-link" href="">Contacts</a></li>
-      </ul>
+      <div> 
+        <button type="button" class="menu-close-btn">
+          <svg class="modal-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-x-close"></use>
+          </svg>
+        </button>
+        <ul class="mob-menu-list">
+          <li class="mob-menu-item">
+            <a class="mob-menu-link" href="./index.html">Studio</a></li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link" href="">Portfolio</a></li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link" href="">Contacts</a></li>
+        </ul>
+      </div>
       <address class="mob-contact-adress">
         <ul class="mob-contact-list">
           <li class="mob-contact-list-item">
